router module completed

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,4 +25,11 @@
       login
     </button>
   </form>
+  <div>
+    <span>
+      Dont have a Account? register <a [routerLink]="['/register']">here</a>
+    </span>
+    <br>
+    <span class="pull-right"> <a [routerLink]="['/forgot-password']">forgot password?</a></span>
+  </div>
 </div>
