--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,47 @@
-<p>
-  register works!
-</p>
+<div class="container">
+  <h1>Welcome to jungle app</h1>
+  <p>Please register to start your session</p>
+  <form #registerForm="ngForm" class="form-group width">
+    <label for="name">Name</label>
+    <input class="form-control" type="text" name="name" placeholder="Full Name" [(ngModel)]="user.name">
+
+    <label for="address">Address</label>
+    <input class="form-control" type="text" name="address" placeholder="Address" [(ngModel)]=user.address>
+    <label for="email">Email</label>
+    <input class="form-control" type="text" name="email" placeholder="Email" [(ngModel)]="user.email" required email
+      #email="ngModel">
+    <div class="danger" *ngIf="email.invalid && (email.touched || email.dirty)">
+      <div *ngIf="email.errors.required">
+        Email is required*
+      </div>
+      <div *ngIf="email.errors.email">
+        Not an valid email
+      </div>
+    </div>
+    <label for="username">Username</label>
+    <input class="form-control" type="text" placeholder="username or email" name="username" [(ngModel)]="user.username"
+      #username="ngModel" required>
+    <div class="danger" [hidden]="username.valid || username.pristine">
+      username is required
+    </div>
+    <label for="password">Password</label>
+    <input class="form-control" type="password" placeholder=" password" name="password" [(ngModel)]="user.password"
+      required minlength="4" maxlength="12" #password="ngModel">
+    <div class="danger" *ngIf="password.invalid && (password.touched || password.dirty)">
+      <div *ngIf="password.errors.required">
+        password is required *
+      </div>
+      <div *ngIf="password.errors.minlength">
+        weak password
+      </div>
+    </div>
+    <br>
+    <button [disabled]="!registerForm.valid" *ngIf="!submitting" (click)="register()" class="btn btn-primary">
+      submit
+    </button>
+    <button disabled class="btn btn-info" *ngIf="submitting">submitting... </button>
+  </form>
+  <div>
+    <p>Already Registered? <a [routerLink]="['/login']">login</a></p>
+  </div>
+</div>
