--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,9 +27,9 @@
   </form>
   <div>
     <span>
-      Dont have a Account? register <a [routerLink]="['/register']">here</a>
+      Dont have a Account? register <a [routerLink]="['/auth/register']">here</a>
     </span>
     <br>
-    <span class="pull-right"> <a [routerLink]="['/forgot-password']">forgot password?</a></span>
+    <span class="pull-right"> <a [routerLink]="['/auth/forgot-password']">forgot password?</a></span>
   </div>
 </div>
