--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -42,6 +42,6 @@
     <button disabled class="btn btn-info" *ngIf="submitting">submitting... </button>
   </form>
   <div>
-    <p>Already Registered? <a [routerLink]="['/login']">login</a></p>
+    <p>Already Registered? <a [routerLink]="['/auth/login']">login</a></p>
   </div>
 </div>
