services complete and oop

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <br>
-    <button [disabled]="!loginForm.valid" (click)="loginNow()" class="btn btn-info">
+    <button (click)="loginNow()" class="btn btn-info">
       login
     </button>
   </form>
