--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="sidenav" *ngIf="isLoggedIn()">
+    <a routerLink="/user/dashboard">Home</a>
+    <a routerLink="/product/add">Add Product</a>
+    <a routerLink="product/list">View Product</a>
+    <a class="btb btn-info" (click)="logout()">logout</a>
+</div>
+
+<div class="main">
+    <router-outlet></router-outlet>
+</div>
