--- a/src/app/product/list-product/list-product.component.html
+++ b/src/app/product/list-product/list-product.component.html
@@ -1,3 +1,35 @@
-<p>
-  list-product works!
-</p>
+<div *ngIf="loading">
+  <app-loader></app-loader>
+</div>
+<div *ngIf="!loading">
+  <h2>product list</h2>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>S.N</th>
+        <th>Name</th>
+        <th>Brand</th>
+        <th>Category</th>
+        <th>Manu Date</th>
+        <th>Quality</th>
+        <th>Price</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let prod of products;let i= index">
+        <td>{{i+1}}</td>
+        <td>{{prod.name |uppercase}}</td>
+        <td>{{prod.brand}}</td>
+        <td>{{prod.category}}</td>
+        <td>{{prod.manuDate | date:'hh:mm:ss a'}}</td>
+        <td>{{prod.quality}}</td>
+        <td>{{prod.price}}</td>
+        <td>
+          <button routerLink="/product/edit/{{prod._id}}" class="btn btn-info">edit</button>
+          <button (click)=deleteProduct(prod._id,i); class="btn btn-danger">delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
