--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <a routerLink="/user/dashboard">Home</a>
     <a routerLink="/product/add">Add Product</a>
     <a routerLink="product/list">View Product</a>
+    <a routerLink="product/search">Search Product</a>
     <a class="btb btn-info" (click)="logout()">logout</a>
 </div>
 
