--- a/src/app/product/add-product/add-product.component.html
+++ b/src/app/product/add-product/add-product.component.html
@@ -2,7 +2,7 @@
   <h2>Add New Product</h2>
   <form #addProductForm="ngForm" class="form-group width">
     <label for="name">Name</label>
-    <input class="form-control" type="text" name="name" placeholder="Full Name" [(ngModel)]="product.name">
+    <input class="form-control" type="text" name="name" placeholder="Name" [(ngModel)]="product.name">
 
     <label for="brand">Brand</label>
     <input class="form-control" type="text" name="brand" placeholder="brand" [(ngModel)]=product.brand>
