--- a/src/app/product/edit-product/edit-product.component.html
+++ b/src/app/product/edit-product/edit-product.component.html
@@ -7,7 +7,7 @@
     <h2>Edit Product</h2>
     <form #editProductForm="ngForm" class="form-group width">
       <label for="name">Name</label>
-      <input class="form-control" type="text" name="name" placeholder="Full Name" [(ngModel)]="product.name">
+      <input class="form-control" type="text" name="name" placeholder="Name" [(ngModel)]="product.name">
 
       <label for="brand">Brand</label>
       <input class="form-control" type="text" name="brand" placeholder="brand" [(ngModel)]=product.brand>
