--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,3 +1,13 @@
-<p>
-  reset-password works!
-</p>
+<div class="container">
+  <h2>Reset your password here.</h2>
+  <form class="form-group" (ngSubmit)="reset()" #resetPasswordForm="ngForm">
+    <label for="password">password</label>
+    <input class="form-control" type="text" name="password" placeholder="password" [(ngModel)]="user.password" required>
+
+    <label for="confirmPassword">Confirm Password</label>
+    <input class="form-control" type="text" name="confirmPassword" placeholder="confirmPassword" [(ngModel)]="user.confirmPassword" required>
+
+    <button class="btn btn-primary" *ngIf="!submitting" type="submit" [disabled]="!resetPasswordForm.valid">submit</button>
+    <button disabled class="btn btn-info" *ngIf="submitting">submitting</button>
+  </form>
+</div>
