--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,3 +1,9 @@
-<p>
-  forgot-password works!
-</p>
+<div class="container">
+  <h2>Please Provide your Email Address to proceed.</h2>
+  <form class="form-group" (ngSubmit)="forgot()" #forgotPasswordForm="ngForm">
+    <label for="email">Email</label>
+    <input class="form-control" type="text" name="email" placeholder="email" [(ngModel)]="user.email" required>
+    <button class="btn btn-primary" *ngIf="!submitting" type="submit" [disabled]="!forgotPasswordForm.valid">submit</button>
+  </form>
+  <button disabled class="btn btn-info" *ngIf="submitting" [disabled]="!forgotPasswordForm.valid">submitting</button>
+</div>
