--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/product/add">Add Product</a>
     <a routerLink="product/list">View Product</a>
     <a routerLink="product/search">Search Product</a>
+    <a routerLink="user/chat">Chat Room</a>
     <a class="btb btn-info" (click)="logout()">logout</a>
 </div>
 
